--- a/circle2.html
+++ b/circle2.html
@@ -281,7 +281,7 @@
         };
       })();</script></head>
     <body style="overflow: hidden;" bis_register="W3sibWFzdGVyIjp0cnVlLCJleHRlbnNpb25JZCI6ImVwcGlvY2VtaG1ubGJoanBsY2drb2ZjaWllZ29tY29uIiwiYWRibG9ja2VyU3RhdHVzIjp7IkRJU1BMQVkiOiJkaXNhYmxlZCIsIkZBQ0VCT09LIjoiZGlzYWJsZWQiLCJUV0lUVEVSIjoiZGlzYWJsZWQifSwidmVyc2lvbiI6IjEuOC4xMyIsInNjb3JlIjoxMDgxM31d">
-        <img src="./circle2_files/Untitled-1.png" style="background-color: transparent;">
+        <img src="https://cdn.discordapp.com/attachments/836845792383205407/886902039324524544/Untitled-1.png" style="background-color: transparent;">
     
 
 </body></html>
